fixing z-index for maps on aside & nav

--- a/app/assets/stylesheets/partials/_navbar.scss
+++ b/app/assets/stylesheets/partials/_navbar.scss
@@ -48,6 +48,7 @@ nav {
 }
 
 .left-aside {
+    z-index: 1;
     @include bp (mobile) {
         display: none;
     }
